--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -115,7 +115,7 @@
     <div class="section">
         <h2>Contact Us</h2>
         <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-        <p><a href="mailto:your-email@example.com">your-email@example.com</a></p>
+        <p><a href="mailto:your-email@example.com">alixkyle@gmail.com</a></p>
     </div>
     
     <div class="section">
